1999-01-10  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_merge_targets): Don't special-case "-local"
	targets.  Test all.test.

	* automake.in (handle_texinfo): Prepend $(srcdir) to directory
	used to find texinfo.tex.  Report from Glenn Amerine.

1999-01-07  Tom Tromey  <tromey@cygnus.com>

	Based on report from Marcus G. Daniels.  Fixes include.test.
	* automake.in (generate_makefile): Call read_main_am_file.
	(read_main_am_file): New sub.
	(read_am_file): Moved header generation code into
	read_main_am_file.

1999-01-06  Gary V. Vaughan  <garyv@oranda.demon.co.uk>

	* automake.in (require_file_internal): qub perl on win32 hangs
	on a call to unlink for a non-existant file, which in turn causes
	tests/symlink.test to hang on win32.  Check that the file exists
	before unlinking it!

1998-12-24  Thomas Tanner  <tanner@gmx.de>

	* automake.in (handle_ltlibraries): check whether -module was
	defined for libraries names without 'lib' prefix.

Fri Dec 11 10:20:42 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* compile_f_c_cxx.test: Change to use F77 and F77LINK instead of
	FC and FLINK, respectively.
	* flibs.test: same
	* fnoc.test: same
	* fo.test: same
	* fonly.test: same
	* link_f_c.test: same
	* link_f_c_cxx.test: same
	* link_f_cxx.test: same
	* link_f_only.test: same

Fri Dec 11 10:23:17 1998  Matthew D. Langston  <langston@SLAC.Stanford.EDU>

	* automake.in, automake.texi: Change all of the Fortran 77 code to
	use the new `F77' prefix instead of the older `FC' prefix.
	Specifically this changed FC, FCOMPILE, LTFCOMPILE, FLINK and FLD
	to F77, F77COMPILE, LTF77COMPILE, F77LINK and F77LD, respectively.

1999-01-05  Tom Tromey  <tromey@cygnus.com>

	* depend2.am (%.o): Use \012, not \n, to avoid losing `tr's.  From
	Bill Currie.
	(%.lo): Likewise.

1998-12-22  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* depend2.am: Don't assume backslash can't occur in the middle of
	filename; it loses on M$W

1998-12-21  Tom Tromey  <tromey@cygnus.com>
