@@ -1,5 +1,14 @@
 1999-01-10  Tom Tromey  <tromey@cygnus.com>
 
+	* remake-hdr.am: Provide `else' clause for each `if'.
+
+1999-01-10  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* remake-hdr.am: recover from removal of config headers, and try
+	to get real timestamps, which is useful for CVS files
+
+1999-01-10  Tom Tromey  <tromey@cygnus.com>
+
 	* automake.in (handle_merge_targets): Don't special-case "-local"
 	targets.  Test all.test.
 
